added game over baner

--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,10 @@
         <div class="object obj-row2"></div>
         <div class="object obj-row3"></div>
     </div>
-    
+    <div class="game-over hidden">
+        <h1>Game is over!</h1>
+        <button id="newgame">Start new game</button>
+    </div>
     <script src="./mainJS/main.js"></script>
 </body>
 </html>
