added more cars

--- a/index.htm
+++ b/index.htm
@@ -10,7 +10,10 @@
 <body>
     
     <main>
-        <div class="sideroad"></div>
+        <div class="sideroad">
+            <input id="colision1" type="number" placeholder="left" value="-10">
+            <input id="colision2" type="number" placeholder="Right" value="10">
+        </div>
         <div id="mainroad">
             <div class="road"></div>
             <div class="road"></div>
@@ -36,6 +39,9 @@
         <div class="object obj-row1"></div>
         <div class="object obj-row2"></div>
         <div class="object obj-row3"></div>
+        <div class="object obj-row4"></div>
+        <div class="object obj-row5"></div>
+        <div class="object obj-row6"></div>
     </div>
     <div class="game-over hidden">
         <h1>Game is over!</h1>
